[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["Jakko Sikkar <jakko.sikkar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
hyper = "0.13.5"
slab = "0.4.2"
tokio = { version = "0.2.13", features = ["full"] }
